Refactor: Relocate Theme.xml to core:designsystem and update Manifests
This commit moves the `themes.xml` file from `app/src/main/res/values` to `core/designsystem/src/main/res/values`.

The theme name is changed from `Theme.Showcase` to `Theme`.

All `AndroidManifest.xml` files in the `app`, `core:designsystem`, `core:ui`, and feature modules (`customtabs`, `hiltcomposable`, `ktlint`, `localsnackbarhoststate`, `navigationarguments`, `roborazzi`, `safeurihandler`) have been updated to reference the new theme location and name (`@style/Theme`).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Showcase"
+        android:theme="@style/Theme"
         tools:targetApi="33">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Showcase">
+            android:theme="@style/Theme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
