CI: Add identifier to screenshot test report in PR comments
This commit adds a specific HTML comment `<!-- screenshot-test-report -->` to the beginning of the screenshot test report posted in pull request comments.

This identifier will allow for easier parsing and potential automation of actions based on the presence or content of the screenshot test report.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -86,6 +86,8 @@ jobs:
         run: |
           files=$(find . -type f -name "*_compare.png" | sort)
           if [ -n "$files" ]; then
+            echo "<!-- screenshot-test-report -->" >> "$REPORT_FILE"
+            echo "" >> "$REPORT_FILE"
             echo "> [!NOTE]" >> "$REPORT_FILE"
             echo "> Differences found in $(echo "$files" | wc -l) screenshots." >> "$REPORT_FILE"
             echo "" >> "$REPORT_FILE"
