--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -2,9 +2,9 @@ name: '🧐 Gemini Pull Request Review'
 
 on:
   pull_request:
-    types:
-      - 'opened'
-      - 'reopened'
+#    types:
+#      - 'opened'
+#      - 'reopened'
   issue_comment:
     types:
       - 'created'
