--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -42,14 +42,14 @@ jobs:
         uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2.1.1
         with:
           name: unit-test-report
-          path: '**/build/test-results/**/TEST-*.xml'
+          path: "**/build/test-results/**/TEST-*.xml"
           reporter: java-junit
 
       - name: Upload screenshot test results
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: screenshot-test-results
-          path: '**/build/outputs/roborazzi'
+          path: "**/build/outputs/roborazzi"
           retention-days: 30
 
   screenshot-test-results:
@@ -109,6 +109,7 @@ jobs:
           else
             echo "report_present=false" >> "$GITHUB_OUTPUT"
           fi
+
       - name: Delete outdated report
         env:
           GH_TOKEN: ${{ github.token }}
@@ -126,6 +127,7 @@ jobs:
           for comment_id in $comment_ids; do
             gh api -X DELETE "repos/${REPOSITORY}/issues/comments/${comment_id}"
           done
+
       - name: Post report
         if: ${{ success() && !cancelled() && steps.create-report.outputs.report_present == 'true' }}
         env:
