--- a/.github/workflows/record-screenshots.yml
+++ b/.github/workflows/record-screenshots.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          fetch-depth: 0
 
       - name: Setup JDK
         uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
@@ -26,19 +28,32 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@ed408507eac070d1f99cc633dbcf757c94c7933a # v4.4.3
 
-      - name: Get files hash
-        id: hash
+      - name: Get branch name
+        id: branch
         shell: bash
         run: |
           hash=$(git ls-files -z | xargs -0 sha256sum | sha256sum | awk '{print $1}')
-          echo "hash=${hash:0:7}" >> "$GITHUB_OUTPUT"
+          echo "branch=_screenshots_${hash:0:7}" >> "$GITHUB_OUTPUT"
+
+      - name: Check if branch exists
+        id: check-branch
+        shell: bash
+        env:
+          BRANCH: ${{ steps.branch.outputs.branch }}
+        run: |
+          if git show-ref --verify --quiet "refs/remotes/origin/${BRANCH}"; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Record screenshots
+        if: ${{ steps.check-branch.outputs.exists == "false" }}
         run: ./gradlew recordRoborazziDebug
 
       - name: Upload
+        if: ${{ steps.check-branch.outputs.exists == "false" }}
         uses: daiji256/upload-to-orphan-branch@c7b7f47558b9ebd00985945e85b6a2ff3d0ce883 # v0.1.1
         with:
-          branch: _screenshots_${{ steps.hash.outputs.hash }}
+          branch: ${{ steps.branch.outputs.branch }}
           path: "**/build/outputs/roborazzi"
-          overwrite: true
