--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -68,7 +68,7 @@ jobs:
         if: ${{ steps.check-base-screenshots-branch.outputs.exists == 'false' }}
         uses: daiji256/upload-to-orphan-branch@c7b7f47558b9ebd00985945e85b6a2ff3d0ce883 # v0.1.1
         with:
-          branch: ${{ steps.bfind **/build/outputs/roborazzi -type ffind **/build/outputs/roborazzi -type franch.outputs.branch }}
+          branch: ${{ steps.base-screenshots-branch.outputs.branch }}
           committer-name: ${{ env.SCREENSHOTS_COMMITTER_NAME }}
           committer-email: ${{ env.SCREENSHOTS_COMMITTER_EMAIL }}
           commit-message: ${{ env.SCREENSHOTS_COMMIT_MESSAGE }}
