--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -21,7 +21,7 @@ jobs:
       SCREENSHOTS_MAX_AGE_SECONDS: 600 # TODO: 14 days
 
     steps:
-      - name: Checkout
+      - name: Checkout base
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{ github.event.pull_request.base.ref }}
