--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -67,7 +67,7 @@ jobs:
         if: ${{ steps.check-base-screenshots-branch.outputs.exists == 'true' }}
         uses: daiji256/download-from-orphan-branch@04e2d3ac47d18764bb143b5d5653f898ec54e305 # v0.1.0
         with:
-          branch: ${{ steps.base-screenshots-branch.outputs.branch }}
+          branch: ${{ steps.base-screenshots-branch.outputs.name }}
 
       - name: Record base screenshots
         if: ${{ steps.check-base-screenshots-branch.outputs.exists == 'false' }}
@@ -78,7 +78,7 @@ jobs:
         if: ${{ steps.check-base-screenshots-branch.outputs.exists == 'false' }}
         uses: daiji256/upload-to-orphan-branch@c7b7f47558b9ebd00985945e85b6a2ff3d0ce883 # v0.1.1
         with:
-          branch: ${{ steps.base-screenshots-branch.outputs.branch }}
+          branch: ${{ steps.base-screenshots-branch.outputs.name }}
           committer-name: ${{ env.SCREENSHOTS_COMMITTER_NAME }}
           committer-email: ${{ env.SCREENSHOTS_COMMITTER_EMAIL }}
           commit-message: ${{ env.SCREENSHOTS_COMMIT_MESSAGE }}
