--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,6 +19,11 @@ jobs:
       SCREENSHOTS_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
       SCREENSHOTS_COMMIT_MESSAGE: screenshots
       SCREENSHOTS_MAX_AGE_SECONDS: 600 # TODO: 14 days
+      COMPANION_SCREENSHOTS_BRANCH_PREFIX: _companion_screenshots_
+      COMPANION_SCREENSHOTS_COMMITTER_NAME: github-actions[bot]
+      COMPANION_SCREENSHOTS_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
+      COMPANION_SCREENSHOTS_COMMIT_MESSAGE: screenshots
+      COMPANION_SCREENSHOTS_MAX_AGE_SECONDS: 600 # TODO: 14 days
 
     steps:
       - name: Checkout base
@@ -84,37 +89,68 @@ jobs:
           commit-message: ${{ env.SCREENSHOTS_COMMIT_MESSAGE }}
           path: "**/build/outputs/roborazzi"
 
-      - name: Check
-        shell: bash
-        run: |
-          shopt -s globstar
-          find **/build/outputs/roborazzi -type f
-
-      - name: Failure
-        run: exit 1
-
-      - name: Checkout
+      - name: Checkout head
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Setup JDK
-        uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
-        with:
-          distribution: temurin
-          java-version: 21
+      - name: Get head files hash
+        id: head-files-hash
+        shell: bash
+        run: |
+          hash=$(git ls-files -z | xargs -0 sha256sum | sha256sum | awk '{print $1}')
+          echo "hash=${hash:0:7}" >> "$GITHUB_OUTPUT"
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@ed408507eac070d1f99cc633dbcf757c94c7933a # v4.4.3
+      - name: Get head screenshots branch name
+        id: head-screenshots-branch
+        shell: bash
+        env:
+          HEAD_FILES_HASH: ${{ steps.head-files-hash.outputs.hash }}
+        run: |
+          echo "name=$SCREENSHOTS_BRANCH_PREFIX$HEAD_FILES_HASH" >> "$GITHUB_OUTPUT"
 
-      - name: Download screenshots
-        uses: dawidd6/action-download-artifact@ac66b43f0e6a346234dd65d4d0c8fbb31cb316e5 # v11
-        continue-on-error: true
-        with:
-          name: screenshots
-          workflow: record-screenshots.yml
-          branch: ${{ github.base_ref }}
+      - name: Get companion screenshots branch name
+        id: companion-screenshots-branch
+        shell: bash
+        env:
+          BASE_FILES_HASH: ${{ steps.base-files-hash.outputs.hash }}
+          HEAD_FILES_HASH: ${{ steps.head-files-hash.outputs.hash }}
+        run: |
+          echo "name=${COMPANION_SCREENSHOTS_BRANCH_PREFIX}${BASE_FILES_HASH}_${HEAD_FILES_HASH}" >> "$GITHUB_OUTPUT"
+
+      - name: Check if head screenshots branch exists
+        id: check-head-screenshots-branch
+        shell: bash
+        env:
+          BRANCH: ${{ steps.head-screenshots-branch.outputs.name }}
+        run: |
+          if git show-ref --verify --quiet "refs/remotes/origin/${BRANCH}"; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Check if companion screenshots branch exists
+        id: check-companion-screenshots-branch
+        shell: bash
+        env:
+          BRANCH: ${{ steps.companion-screenshots-branch.outputs.name }}
+        run: |
+          if git show-ref --verify --quiet "refs/remotes/origin/${BRANCH}
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Run unit test
-        run: ./gradlew testDebugUnitTest -Proborazzi.test.compare=true
+        shell: bash
+        env:
+          IS_HEAD_SCREENSHOTS_BRANCH_EXISTS: ${{ steps.check-head-screenshots-branch.outputs.exists }}
+          IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS: ${{ steps.check-base-screenshots-branch.outputs.exists }}
+        run: |
+          if [ "$IS_HEAD_SCREENSHOTS_BRANCH_EXISTS" = "true" ] && [ "$IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS" = "true" ]; then
+            ./gradlew testDebugUnitTest
+          else
+            ./gradlew testDebugUnitTest -Proborazzi.test.compare=true -Proborazzi.cleanupOldScreenshots=true
+          fi
 
       - name: Display unit test report
         if: ${{ !cancelled() }}
@@ -124,12 +160,29 @@ jobs:
           path: "**/build/test-results/**/TEST-*.xml"
           reporter: java-junit
 
-      - name: Upload screenshot test results
+      - name: Upload head screenshots
+        if: ${{ !cancelled() && steps.check-head-screenshots-branch.outputs.exists == 'false' }}
         uses: daiji256/upload-to-orphan-branch@c7b7f47558b9ebd00985945e85b6a2ff3d0ce883 # v0.1.1
         with:
-          name: _screenshot_test_results_${{ github.event.pull_request.number }}
-          path: "**/build/outputs/roborazzi"
-          overwrite: true
+          branch: ${{ steps.head-screenshots-branch.outputs.name }}
+          committer-name: ${{ env.SCREENSHOTS_COMMITTER_NAME }}
+          committer-email: ${{ env.SCREENSHOTS_COMMITTER_EMAIL }}
+          commit-message: ${{ env.SCREENSHOTS_COMMIT_MESSAGE }}
+          path: |
+            **/build/outputs/roborazzi
+            !**/build/outputs/roborazzi/*_compare.png
+
+      - name: Upload companion screenshots
+        if: ${{ !cancelled() && steps.check-companion-screenshots-branch.outputs.exists == 'false' }}
+        uses: daiji256/upload-to-orphan-branch@c7b7f47558b9ebd00985945e85b6a2ff3d0ce883 # v0.1.1
+        with:
+          branch: ${{ steps.companion-screenshots-branch.outputs.name }}
+          committer-name: ${{ env.COMPANION_SCREENSHOTS_COMMITTER_NAME }}
+          committer-email: ${{ env.COMPANION_SCREENSHOTS_COMMITTER_EMAIL }}
+          commit-message: ${{ env.COMPANION_SCREENSHOTS_COMMIT_MESSAGE }}
+          path: |
+            **/build/outputs/roborazzi
+            !**/build/outputs/roborazzi/*_compare.png
 
   screenshot-test-results:
     runs-on: ubuntu-latest
