--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -149,7 +149,7 @@ jobs:
           if [ "$IS_HEAD_SCREENSHOTS_BRANCH_EXISTS" = "true" ] && [ "$IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS" = "true" ]; then
             ./gradlew testDebugUnitTest
           else
-            ./gradlew testDebugUnitTest -Proborazzi.test.compare=true -Proborazzi.cleanupOldScreenshots=true
+            ./gradlew testDebugUnitTest -Proborazzi.test.compare=true
           fi
 
       - name: Display unit test report
