--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -185,8 +185,7 @@ jobs:
   screenshot-test-results:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs:
-      - unit-test
+    needs: [unit-test]
     permissions:
       contents: write
       pull-requests: write
