--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -230,4 +230,4 @@ jobs:
             echo "</details>"
           } >> "$REPORT_FILE"
           gh pr comment $PR_NUMBER --body-file $REPORT_FILE
-          rm REPORT_FILE
+          rm "$REPORT_FILE"
