--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -229,4 +229,4 @@ jobs:
             echo "</details>"
           } >> "$REPORT_FILE"
           gh pr comment $PR_NUMBER --body-file $REPORT_FILE
-          rm "$REPORT_FILE"
+          # TODO: rm "$REPORT_FILE"
