--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -147,7 +147,7 @@ jobs:
           IS_HEAD_SCREENSHOTS_BRANCH_EXISTS: ${{ steps.check-head-screenshots-branch.outputs.exists }}
           IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS: ${{ steps.check-companion-screenshots-branch.outputs.exists }}
         run: |
-          if [ "$IS_HEAD_SCREENSHOTS_BRANCH_EXISTS" = "true" ] && [ "$IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS" = "true" ]; then
+          if [[ "$IS_HEAD_SCREENSHOTS_BRANCH_EXISTS" == "true" && "$IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS" == "true" ]]; then
             ./gradlew testDebugUnitTest
           else
             ./gradlew testDebugUnitTest -Proborazzi.test.compare=true
