--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -16,22 +16,53 @@ jobs:
 
     env:
       SCREENSHOTS_BRANCH_PREFIX: _screenshots_
-      SCREENSHOTS_COMMITTER_NAME: github-actions[bot]
-      SCREENSHOTS_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-      SCREENSHOTS_COMMIT_MESSAGE: screenshots
-      SCREENSHOTS_MAX_AGE_SECONDS: 600 # TODO: 14 days
       COMPANION_SCREENSHOTS_BRANCH_PREFIX: _companion_screenshots_
-      COMPANION_SCREENSHOTS_COMMITTER_NAME: github-actions[bot]
-      COMPANION_SCREENSHOTS_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-      COMPANION_SCREENSHOTS_COMMIT_MESSAGE: screenshots
-      COMPANION_SCREENSHOTS_MAX_AGE_SECONDS: 600 # TODO: 14 days
+      ORPHAN_BRANCH_COMMITTER_NAME: github-actions[bot]
+      ORPHAN_BRANCH_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
+      ORPHAN_BRANCH_MAX_AGE_SECONDS: 600 # TODO: 14 days
 
     steps:
+      - name: Fetch all branches
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          fetch-depth: 0
+
+      - name: Delete outdated orphan branches
+        shell: bash
+        run: |
+          now=$(date +%s)
+          git branch -r --format="%(refname:lstrip=3)" | while read -r branch; do
+            if [[ "$branch" != ${SCREENSHOTS_BRANCH_PREFIX}* && "$branch" != ${COMPANION_SCREENSHOTS_BRANCH_PREFIX}* ]]; then
+              continue
+            fi
+
+            commit_count=$(git rev-list --count "origin/$branch")
+            if [ "$commit_count" -ne 1 ]; then continue; fi
+
+            committer_name=$(git log -1 --format=%an "origin/$branch")
+            if [ "$committer_name" != "$ORPHAN_BRANCH_COMMITTER_NAME" ]; then
+              continue
+            fi
+
+            committer_email=$(git log -1 --format=%ae "origin/$branch")
+            if [ "$committer_email" != "$ORPHAN_BRANCH_COMMITTER_EMAIL" ]; then
+              continue
+            fi
+
+            commit_date=$(git log -1 --format=%ct "origin/$branch")
+            age=$((now - commit_date))
+            if [ "$age" -lt "$ORPHAN_BRANCH_MAX_AGE_SECONDS" ]; then
+              continue
+            fi
+
+            echo "delete $branch"
+            git push origin --delete "$branch"
+          done
+
       - name: Checkout base
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{ github.event.pull_request.base.ref }}
-          fetch-depth: 0
 
       - name: Setup JDK
         uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
@@ -85,9 +116,8 @@ jobs:
         uses: daiji256/upload-to-orphan-branch@3325cab5acaa8d391b2a1ef90eba2f168c7879be
         with:
           branch: ${{ steps.base-screenshots-branch.outputs.name }}
-          committer-name: ${{ env.SCREENSHOTS_COMMITTER_NAME }}
-          committer-email: ${{ env.SCREENSHOTS_COMMITTER_EMAIL }}
-          commit-message: ${{ env.SCREENSHOTS_COMMIT_MESSAGE }}
+          committer-name: ${{ env.ORPHAN_BRANCH_COMMITTER_NAME }}
+          committer-email: ${{ env.ORPHAN_BRANCH_COMMITTER_EMAIL }}
           path: "**/build/outputs/roborazzi"
 
       - name: Checkout head
@@ -173,9 +203,8 @@ jobs:
         uses: daiji256/upload-to-orphan-branch@3325cab5acaa8d391b2a1ef90eba2f168c7879be
         with:
           branch: ${{ steps.head-screenshots-branch.outputs.name }}
-          committer-name: ${{ env.SCREENSHOTS_COMMITTER_NAME }}
-          committer-email: ${{ env.SCREENSHOTS_COMMITTER_EMAIL }}
-          commit-message: ${{ env.SCREENSHOTS_COMMIT_MESSAGE }}
+          committer-name: ${{ env.ORPHAN_BRANCH_COMMITTER_NAME }}
+          committer-email: ${{ env.ORPHAN_BRANCH_COMMITTER_EMAIL }}
           path: |
             **/build/outputs/roborazzi
             !**/build/outputs/roborazzi/*_compare.png
@@ -186,9 +215,8 @@ jobs:
         uses: daiji256/upload-to-orphan-branch@3325cab5acaa8d391b2a1ef90eba2f168c7879be
         with:
           branch: ${{ steps.companion-screenshots-branch.outputs.name }}
-          committer-name: ${{ env.COMPANION_SCREENSHOTS_COMMITTER_NAME }}
-          committer-email: ${{ env.COMPANION_SCREENSHOTS_COMMITTER_EMAIL }}
-          commit-message: ${{ env.COMPANION_SCREENSHOTS_COMMIT_MESSAGE }}
+          committer-name: ${{ env.ORPHAN_BRANCH_COMMITTER_NAME }}
+          committer-email: ${{ env.ORPHAN_BRANCH_COMMITTER_EMAIL }}
           path: "**/build/outputs/roborazzi/*_compare.png"
 
       - name: Delete outdated report
