--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -239,7 +239,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
-          mapfile -d "" files < <(find . -type f -name "*_compare.png" -print0 | sort -z)
+          mapfile -d "" files < <(find . -type f -path "**/build/outputs/roborazzi/*_compare.png" -print0)
           if [ "${#files[@]}" -eq 0 ]; then
             exit 0
           fi
