--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          find . -regex '^.*/build/reports/lint-results.*\.sarif$' -type f | while read report; do
+          find . -regex '^.*/build/reports/lint-results.*\.sarif$' -type f | while read -r report; do
             reviewdog \
               -name="lint" \
               -f=sarif \
