--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,7 +19,7 @@ jobs:
       COMPANION_SCREENSHOTS_BRANCH_PREFIX: _companion_screenshots_
       ORPHAN_BRANCH_COMMITTER_NAME: github-actions[bot]
       ORPHAN_BRANCH_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-      ORPHAN_BRANCH_MAX_AGE_SECONDS: 600 # TODO: 14 days
+      ORPHAN_BRANCH_MAX_AGE_SECONDS: 1209600 # 14 days
 
     steps:
       - name: Fetch all branches
