--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -26,7 +26,7 @@ jobs:
       ORPHAN_BRANCH_MAX_AGE_SECONDS: 1209600 # 14 days
 
     steps:
-      - name: Fetch all branches
+      - name: Checkout (fetch all)
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
